# sbase_lab_2

./: CMakeLists.txt  kernel.cl  main.cpp
